--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
+    "types": ["types/typing.d.ts"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
