--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.10",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/react-color": "^3.0.6"
   }
 }
